--- a/utility.css
+++ b/utility.css
@@ -9,6 +9,18 @@
     --gap: 1rem;
 }
 
+.text-c {
+    text-align: center;
+}
+
+.text-l {
+    text-align: left;
+}
+
+.text-r {
+    text-align: right;
+}
+
 .row {
     display: flex;
     flex-direction: row;
