--- a/style.css
+++ b/style.css
@@ -163,11 +163,15 @@ input[type="radio"]~label {
 }
 
 table {
-    border-spacing: 0;
+    /* border-spacing: 0;
     display: block;
     overflow-x: auto;
     text-align: left;
+    width: 100%; */
+
     width: 100%;
+    border-collapse: collapse;
+    background: var(--bg-main);
 }
 
 td,
